y.output
Terminals unused in grammar

   BOOL


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: simple_statement
    5          | compound_statement
    6          | '{' statement_list '}'
    7          | '{' '}'
    8          | ';'

    9 simple_statement: assignment_statement ';'
   10                 | declaration_statement ';'
   11                 | expression ';'
   12                 | print_statement
   13                 | BREAK ';'
   14                 | CONTINUE ';'

   15 PARAMTER_LIST: data_type VARIABLE ',' PARAMTER_LIST
   16              | data_type VARIABLE
   17              | /* empty */

   18 compound_statement: for_statement
   19                   | while_statement
   20                   | if_statement
   21                   | do_while_statement
   22                   | switch_statement
   23                   | FUNCTION VOID VARIABLE '(' PARAMTER_LIST ')' '{' return_expression '}'
   24                   | FUNCTION VOID VARIABLE '(' PARAMTER_LIST ')' '{' statement_list return_expression '}'
   25                   | FUNCTION data_type VARIABLE '(' PARAMTER_LIST ')' '{' return_expression '}'
   26                   | FUNCTION data_type VARIABLE '(' PARAMTER_LIST ')' '{' statement_list return_expression '}'

   27 assignment_statement: VARIABLE '=' expression
   28                     | VARIABLE DECREMENT
   29                     | VARIABLE INCREMENT

   30 print_statement: PRINT '(' expression ')' ';'

   31 return_expression: RETURN expression ';'
   32                  | RETURN ';'
   33                  | /* empty */

   34 PARAMTER_LIST_CALL: expression ',' PARAMTER_LIST_CALL
   35                   | expression
   36                   | /* empty */

   37 function_call: VARIABLE '(' PARAMTER_LIST_CALL ')'

   38 data_type: INT_TYPE
   39          | FLOAT_TYPE
   40          | BOOL_TYPE
   41          | CHAR_TYPE
   42          | STRING_TYPE

   43 declaration_statement: CONST data_type VARIABLE '=' expression
   44                      | data_type VARIABLE '=' expression

   45 for_statement: FOR '(' declaration_statement ';' expression ';' assignment_statement ')' statement

   46 while_statement: WHILE '(' expression ')' statement

   47 do_while_statement: DO statement WHILE '(' expression ')'

   48 if_statement: IF '(' expression ')' statement
   49             | IF '(' expression ')' statement ELSE statement

   50 switch_statement: SWITCH '(' VARIABLE ')' '{' cases '}'
   51                 | SWITCH '(' VARIABLE ')' '{' cases default_statement '}'

   52 cases: CASE INTEGER ':' statement_list cases
   53      | CASE true_BOOL ':' statement_list cases
   54      | CASE false_BOOL ':' statement_list cases
   55      | /* empty */

   56 default_statement: DEFAULT ':' statement

   57 expression: expression '+' expression
   58           | expression '-' expression
   59           | expression '*' expression
   60           | expression '/' expression
   61           | expression '%' expression
   62           | '(' expression ')'
   63           | NOT expression
   64           | expression AND expression
   65           | expression OR expression
   66           | expression GREATER_EQUAL expression
   67           | expression LESS_EQUAL expression
   68           | expression EQUAL expression
   69           | expression NOTEQUAL expression
   70           | expression '<' expression
   71           | expression '>' expression
   72           | INTEGER
   73           | FLOAT
   74           | CHAR
   75           | STRING
   76           | VARIABLE
   77           | CONSTANT
   78           | true_BOOL
   79           | false_BOOL
   80           | function_call


Terminals, with rules where they appear

$end (0) 0
'%' (37) 61
'(' (40) 23 24 25 26 30 37 45 46 47 48 49 50 51 62
')' (41) 23 24 25 26 30 37 45 46 47 48 49 50 51 62
'*' (42) 59
'+' (43) 57
',' (44) 15 34
'-' (45) 58
'/' (47) 60
':' (58) 52 53 54 56
';' (59) 8 9 10 11 13 14 30 31 32 45
'<' (60) 70
'=' (61) 27 43 44
'>' (62) 71
'{' (123) 6 7 23 24 25 26 50 51
'}' (125) 6 7 23 24 25 26 50 51
error (256)
INTEGER (258) 52 72
FLOAT (259) 73
CHAR (260) 74
BOOL (261)
STRING (262) 75
VARIABLE (263) 15 16 23 24 25 26 27 28 29 37 43 44 50 51 76
CONSTANT (264) 77
true_BOOL (265) 53 78
false_BOOL (266) 54 79
IF (267) 48 49
SWITCH (268) 50 51
CASE (269) 52 53 54
DEFAULT (270) 56
FOR (271) 45
WHILE (272) 46 47
DO (273) 47
BREAK (274) 13
CONTINUE (275) 14
CONST (276) 43
INT_TYPE (277) 38
FLOAT_TYPE (278) 39
BOOL_TYPE (279) 40
CHAR_TYPE (280) 41
STRING_TYPE (281) 42
VOID (282) 23 24
FUNCTION (283) 23 24 25 26
PRINT (284) 30
RETURN (285) 31 32
IFX (286)
ELSE (287) 49
OR (288) 65
AND (289) 64
NOTEQUAL (290) 69
EQUAL (291) 68
LESS_EQUAL (292) 67
GREATER_EQUAL (293) 66
NOT (294) 63
INCREMENT (295) 29
DECREMENT (296) 28


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
program (58)
    on left: 1, on right: 0
statement_list (59)
    on left: 2 3, on right: 1 3 6 24 26 52 53 54
statement (60)
    on left: 4 5 6 7 8, on right: 2 3 45 46 47 48 49 56
simple_statement (61)
    on left: 9 10 11 12 13 14, on right: 4
PARAMTER_LIST (62)
    on left: 15 16 17, on right: 15 23 24 25 26
compound_statement (63)
    on left: 18 19 20 21 22 23 24 25 26, on right: 5
assignment_statement (64)
    on left: 27 28 29, on right: 9 45
print_statement (65)
    on left: 30, on right: 12
return_expression (66)
    on left: 31 32 33, on right: 23 24 25 26
PARAMTER_LIST_CALL (67)
    on left: 34 35 36, on right: 34 37
function_call (68)
    on left: 37, on right: 80
data_type (69)
    on left: 38 39 40 41 42, on right: 15 16 25 26 43 44
declaration_statement (70)
    on left: 43 44, on right: 10 45
for_statement (71)
    on left: 45, on right: 18
while_statement (72)
    on left: 46, on right: 19
do_while_statement (73)
    on left: 47, on right: 21
if_statement (74)
    on left: 48 49, on right: 20
switch_statement (75)
    on left: 50 51, on right: 22
cases (76)
    on left: 52 53 54 55, on right: 50 51 52 53 54
default_statement (77)
    on left: 56, on right: 51
expression (78)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80, on right: 11 27 30 31 34 35 43 44 45 46 47 48
    49 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71


state 0

    0 $accept: . program $end

    INTEGER      shift, and go to state 1
    FLOAT        shift, and go to state 2
    CHAR         shift, and go to state 3
    STRING       shift, and go to state 4
    VARIABLE     shift, and go to state 5
    CONSTANT     shift, and go to state 6
    true_BOOL    shift, and go to state 7
    false_BOOL   shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    NOT          shift, and go to state 24
    '{'          shift, and go to state 25
    ';'          shift, and go to state 26
    '('          shift, and go to state 27

    program                go to state 28
    statement_list         go to state 29
    statement              go to state 30
    simple_statement       go to state 31
    compound_statement     go to state 32
    assignment_statement   go to state 33
    print_statement        go to state 34
    function_call          go to state 35
    data_type              go to state 36
    declaration_statement  go to state 37
    for_statement          go to state 38
    while_statement        go to state 39
    do_while_statement     go to state 40
    if_statement           go to state 41
    switch_statement       go to state 42
    expression             go to state 43


state 1

   72 expression: INTEGER .

    $default  reduce using rule 72 (expression)


state 2

   73 expression: FLOAT .

    $default  reduce using rule 73 (expression)


state 3

   74 expression: CHAR .

    $default  reduce using rule 74 (expression)


state 4

   75 expression: STRING .

    $default  reduce using rule 75 (expression)


state 5

   27 assignment_statement: VARIABLE . '=' expression
   28                     | VARIABLE . DECREMENT
   29                     | VARIABLE . INCREMENT
   37 function_call: VARIABLE . '(' PARAMTER_LIST_CALL ')'
   76 expression: VARIABLE .

    '='        shift, and go to state 44
    INCREMENT  shift, and go to state 45
    DECREMENT  shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 76 (expression)


state 6

   77 expression: CONSTANT .

    $default  reduce using rule 77 (expression)


state 7

   78 expression: true_BOOL .

    $default  reduce using rule 78 (expression)


state 8

   79 expression: false_BOOL .

    $default  reduce using rule 79 (expression)


state 9

   48 if_statement: IF . '(' expression ')' statement
   49             | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 48


state 10

   50 switch_statement: SWITCH . '(' VARIABLE ')' '{' cases '}'
   51                 | SWITCH . '(' VARIABLE ')' '{' cases default_statement '}'

    '('  shift, and go to state 49


state 11

   45 for_statement: FOR . '(' declaration_statement ';' expression ';' assignment_statement ')' statement

    '('  shift, and go to state 50


state 12

   46 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 51


state 13

   47 do_while_statement: DO . statement WHILE '(' expression ')'

    INTEGER      shift, and go to state 1
    FLOAT        shift, and go to state 2
    CHAR         shift, and go to state 3
    STRING       shift, and go to state 4
    VARIABLE     shift, and go to state 5
    CONSTANT     shift, and go to state 6
    true_BOOL    shift, and go to state 7
    false_BOOL   shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    NOT          shift, and go to state 24
    '{'          shift, and go to state 25
    ';'          shift, and go to state 26
    '('          shift, and go to state 27

    statement              go to state 52
    simple_statement       go to state 31
    compound_statement     go to state 32
    assignment_statement   go to state 33
    print_statement        go to state 34
    function_call          go to state 35
    data_type              go to state 36
    declaration_statement  go to state 37
    for_statement          go to state 38
    while_statement        go to state 39
    do_while_statement     go to state 40
    if_statement           go to state 41
    switch_statement       go to state 42
    expression             go to state 43


state 14

   13 simple_statement: BREAK . ';'

    ';'  shift, and go to state 53


state 15

   14 simple_statement: CONTINUE . ';'

    ';'  shift, and go to state 54


state 16

   43 declaration_statement: CONST . data_type VARIABLE '=' expression

    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21

    data_type  go to state 55


state 17

   38 data_type: INT_TYPE .

    $default  reduce using rule 38 (data_type)


state 18

   39 data_type: FLOAT_TYPE .

    $default  reduce using rule 39 (data_type)


state 19

   40 data_type: BOOL_TYPE .

    $default  reduce using rule 40 (data_type)


state 20

   41 data_type: CHAR_TYPE .

    $default  reduce using rule 41 (data_type)


state 21

   42 data_type: STRING_TYPE .

    $default  reduce using rule 42 (data_type)


state 22

   23 compound_statement: FUNCTION . VOID VARIABLE '(' PARAMTER_LIST ')' '{' return_expression '}'
   24                   | FUNCTION . VOID VARIABLE '(' PARAMTER_LIST ')' '{' statement_list return_expression '}'
   25                   | FUNCTION . data_type VARIABLE '(' PARAMTER_LIST ')' '{' return_expression '}'
   26                   | FUNCTION . data_type VARIABLE '(' PARAMTER_LIST ')' '{' statement_list return_expression '}'

    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21
    VOID         shift, and go to state 56

    data_type  go to state 57


state 23

   30 print_statement: PRINT . '(' expression ')' ';'

    '('  shift, and go to state 58


state 24

   63 expression: NOT . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 60


state 25

    6 statement: '{' . statement_list '}'
    7          | '{' . '}'

    INTEGER      shift, and go to state 1
    FLOAT        shift, and go to state 2
    CHAR         shift, and go to state 3
    STRING       shift, and go to state 4
    VARIABLE     shift, and go to state 5
    CONSTANT     shift, and go to state 6
    true_BOOL    shift, and go to state 7
    false_BOOL   shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    NOT          shift, and go to state 24
    '{'          shift, and go to state 25
    '}'          shift, and go to state 61
    ';'          shift, and go to state 26
    '('          shift, and go to state 27

    statement_list         go to state 62
    statement              go to state 30
    simple_statement       go to state 31
    compound_statement     go to state 32
    assignment_statement   go to state 33
    print_statement        go to state 34
    function_call          go to state 35
    data_type              go to state 36
    declaration_statement  go to state 37
    for_statement          go to state 38
    while_statement        go to state 39
    do_while_statement     go to state 40
    if_statement           go to state 41
    switch_statement       go to state 42
    expression             go to state 43


state 26

    8 statement: ';' .

    $default  reduce using rule 8 (statement)


state 27

   62 expression: '(' . expression ')'

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 63


state 28

    0 $accept: program . $end

    $end  shift, and go to state 64


state 29

    1 program: statement_list .
    3 statement_list: statement_list . statement

    INTEGER      shift, and go to state 1
    FLOAT        shift, and go to state 2
    CHAR         shift, and go to state 3
    STRING       shift, and go to state 4
    VARIABLE     shift, and go to state 5
    CONSTANT     shift, and go to state 6
    true_BOOL    shift, and go to state 7
    false_BOOL   shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    NOT          shift, and go to state 24
    '{'          shift, and go to state 25
    ';'          shift, and go to state 26
    '('          shift, and go to state 27

    $default  reduce using rule 1 (program)

    statement              go to state 65
    simple_statement       go to state 31
    compound_statement     go to state 32
    assignment_statement   go to state 33
    print_statement        go to state 34
    function_call          go to state 35
    data_type              go to state 36
    declaration_statement  go to state 37
    for_statement          go to state 38
    while_statement        go to state 39
    do_while_statement     go to state 40
    if_statement           go to state 41
    switch_statement       go to state 42
    expression             go to state 43


state 30

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


state 31

    4 statement: simple_statement .

    $default  reduce using rule 4 (statement)


state 32

    5 statement: compound_statement .

    $default  reduce using rule 5 (statement)


state 33

    9 simple_statement: assignment_statement . ';'

    ';'  shift, and go to state 66


state 34

   12 simple_statement: print_statement .

    $default  reduce using rule 12 (simple_statement)


state 35

   80 expression: function_call .

    $default  reduce using rule 80 (expression)


state 36

   44 declaration_statement: data_type . VARIABLE '=' expression

    VARIABLE  shift, and go to state 67


state 37

   10 simple_statement: declaration_statement . ';'

    ';'  shift, and go to state 68


state 38

   18 compound_statement: for_statement .

    $default  reduce using rule 18 (compound_statement)


state 39

   19 compound_statement: while_statement .

    $default  reduce using rule 19 (compound_statement)


state 40

   21 compound_statement: do_while_statement .

    $default  reduce using rule 21 (compound_statement)


state 41

   20 compound_statement: if_statement .

    $default  reduce using rule 20 (compound_statement)


state 42

   22 compound_statement: switch_statement .

    $default  reduce using rule 22 (compound_statement)


state 43

   11 simple_statement: expression . ';'
   57 expression: expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '%' expression
   64           | expression . AND expression
   65           | expression . OR expression
   66           | expression . GREATER_EQUAL expression
   67           | expression . LESS_EQUAL expression
   68           | expression . EQUAL expression
   69           | expression . NOTEQUAL expression
   70           | expression . '<' expression
   71           | expression . '>' expression

    OR             shift, and go to state 69
    AND            shift, and go to state 70
    '<'            shift, and go to state 71
    '>'            shift, and go to state 72
    NOTEQUAL       shift, and go to state 73
    EQUAL          shift, and go to state 74
    LESS_EQUAL     shift, and go to state 75
    GREATER_EQUAL  shift, and go to state 76
    '+'            shift, and go to state 77
    '-'            shift, and go to state 78
    '*'            shift, and go to state 79
    '/'            shift, and go to state 80
    '%'            shift, and go to state 81
    ';'            shift, and go to state 82


state 44

   27 assignment_statement: VARIABLE '=' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 83


state 45

   29 assignment_statement: VARIABLE INCREMENT .

    $default  reduce using rule 29 (assignment_statement)


state 46

   28 assignment_statement: VARIABLE DECREMENT .

    $default  reduce using rule 28 (assignment_statement)


state 47

   37 function_call: VARIABLE '(' . PARAMTER_LIST_CALL ')'

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    $default  reduce using rule 36 (PARAMTER_LIST_CALL)

    PARAMTER_LIST_CALL  go to state 84
    function_call       go to state 35
    expression          go to state 85


state 48

   48 if_statement: IF '(' . expression ')' statement
   49             | IF '(' . expression ')' statement ELSE statement

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 86


state 49

   50 switch_statement: SWITCH '(' . VARIABLE ')' '{' cases '}'
   51                 | SWITCH '(' . VARIABLE ')' '{' cases default_statement '}'

    VARIABLE  shift, and go to state 87


state 50

   45 for_statement: FOR '(' . declaration_statement ';' expression ';' assignment_statement ')' statement

    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21

    data_type              go to state 36
    declaration_statement  go to state 88


state 51

   46 while_statement: WHILE '(' . expression ')' statement

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 89


state 52

   47 do_while_statement: DO statement . WHILE '(' expression ')'

    WHILE  shift, and go to state 90


state 53

   13 simple_statement: BREAK ';' .

    $default  reduce using rule 13 (simple_statement)


state 54

   14 simple_statement: CONTINUE ';' .

    $default  reduce using rule 14 (simple_statement)


state 55

   43 declaration_statement: CONST data_type . VARIABLE '=' expression

    VARIABLE  shift, and go to state 91


state 56

   23 compound_statement: FUNCTION VOID . VARIABLE '(' PARAMTER_LIST ')' '{' return_expression '}'
   24                   | FUNCTION VOID . VARIABLE '(' PARAMTER_LIST ')' '{' statement_list return_expression '}'

    VARIABLE  shift, and go to state 92


state 57

   25 compound_statement: FUNCTION data_type . VARIABLE '(' PARAMTER_LIST ')' '{' return_expression '}'
   26                   | FUNCTION data_type . VARIABLE '(' PARAMTER_LIST ')' '{' statement_list return_expression '}'

    VARIABLE  shift, and go to state 93


state 58

   30 print_statement: PRINT '(' . expression ')' ';'

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 94


state 59

   37 function_call: VARIABLE . '(' PARAMTER_LIST_CALL ')'
   76 expression: VARIABLE .

    '('  shift, and go to state 47

    $default  reduce using rule 76 (expression)


state 60

   57 expression: expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '%' expression
   63           | NOT expression .
   64           | expression . AND expression
   65           | expression . OR expression
   66           | expression . GREATER_EQUAL expression
   67           | expression . LESS_EQUAL expression
   68           | expression . EQUAL expression
   69           | expression . NOTEQUAL expression
   70           | expression . '<' expression
   71           | expression . '>' expression

    $default  reduce using rule 63 (expression)


state 61

    7 statement: '{' '}' .

    $default  reduce using rule 7 (statement)


state 62

    3 statement_list: statement_list . statement
    6 statement: '{' statement_list . '}'

    INTEGER      shift, and go to state 1
    FLOAT        shift, and go to state 2
    CHAR         shift, and go to state 3
    STRING       shift, and go to state 4
    VARIABLE     shift, and go to state 5
    CONSTANT     shift, and go to state 6
    true_BOOL    shift, and go to state 7
    false_BOOL   shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    CHAR_TYPE    shift, and go to state 20
    STRING_TYPE  shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    NOT          shift, and go to state 24
    '{'          shift, and go to state 25
    '}'          shift, and go to state 95
    ';'          shift, and go to state 26
    '('          shift, and go to state 27

    statement              go to state 65
    simple_statement       go to state 31
    compound_statement     go to state 32
    assignment_statement   go to state 33
    print_statement        go to state 34
    function_call          go to state 35
    data_type              go to state 36
    declaration_statement  go to state 37
    for_statement          go to state 38
    while_statement        go to state 39
    do_while_statement     go to state 40
    if_statement           go to state 41
    switch_statement       go to state 42
    expression             go to state 43


state 63

   57 expression: expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '%' expression
   62           | '(' expression . ')'
   64           | expression . AND expression
   65           | expression . OR expression
   66           | expression . GREATER_EQUAL expression
   67           | expression . LESS_EQUAL expression
   68           | expression . EQUAL expression
   69           | expression . NOTEQUAL expression
   70           | expression . '<' expression
   71           | expression . '>' expression

    OR             shift, and go to state 69
    AND            shift, and go to state 70
    '<'            shift, and go to state 71
    '>'            shift, and go to state 72
    NOTEQUAL       shift, and go to state 73
    EQUAL          shift, and go to state 74
    LESS_EQUAL     shift, and go to state 75
    GREATER_EQUAL  shift, and go to state 76
    '+'            shift, and go to state 77
    '-'            shift, and go to state 78
    '*'            shift, and go to state 79
    '/'            shift, and go to state 80
    '%'            shift, and go to state 81
    ')'            shift, and go to state 96


state 64

    0 $accept: program $end .

    $default  accept


state 65

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


state 66

    9 simple_statement: assignment_statement ';' .

    $default  reduce using rule 9 (simple_statement)


state 67

   44 declaration_statement: data_type VARIABLE . '=' expression

    '='  shift, and go to state 97


state 68

   10 simple_statement: declaration_statement ';' .

    $default  reduce using rule 10 (simple_statement)


state 69

   65 expression: expression OR . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 98


state 70

   64 expression: expression AND . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 99


state 71

   70 expression: expression '<' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 100


state 72

   71 expression: expression '>' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 101


state 73

   69 expression: expression NOTEQUAL . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 102


state 74

   68 expression: expression EQUAL . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 103


state 75

   67 expression: expression LESS_EQUAL . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 104


state 76

   66 expression: expression GREATER_EQUAL . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 105


state 77

   57 expression: expression '+' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 106


state 78

   58 expression: expression '-' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 107


state 79

   59 expression: expression '*' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 108


state 80

   60 expression: expression '/' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 109


state 81

   61 expression: expression '%' . expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    VARIABLE    shift, and go to state 59
    CONSTANT    shift, and go to state 6
    true_BOOL   shift, and go to state 7
    false_BOOL  shift, and go to state 8
    NOT         shift, and go to state 24
    '('         shift, and go to state 27

    function_call  go to state 35
    expression     go to state 110


state 82

   11 simple_statement: expression ';' .

    $default  reduce using rule 11 (simple_statement)


state 83
